--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ SAFT method for concrete non-destructive inspection. </p>
 
 <p>Files: </p>
 
-<p>-main.m - General Starter File To Inspect Example Dataset (JAB4.lbv)
--qgui.m - Example GUI built using MATLAB to Test Different Color Gains
--a_filereader.m - Simple binary file reader configured to read in 66 time domain signals 2048 points in length. 
+<p>-main.m - General Starter File To Inspect Example Dataset (JAB4.lbv)<hr>
+-qgui.m - Example GUI built using MATLAB to Test Different Color Gains<hr>
+-a_filereader.m - Simple binary file reader configured to read in 66 time domain signals 2048 points in length. <hr>
 -a_plotBscan.m - SAFT Algorithm to assemble a B-Scan estimate and plot as a image</p>
 
 <h1>
