--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ This code was created initially for ultrasonic concrete inspection. The purpose
 behind releasing the code is to promote discussion and open exploration of the 
 SAFT method for concrete non-destructive inspection. </p>
 
-<p>Files: </p>
+<p>Files:<br> </p>
 
 <p>-main.m - General Starter File To Inspect Example Dataset (JAB4.lbv)<br>
 -qgui.m - Example GUI built using MATLAB to Test Different Color Gains<br>
